# finest-grained-auth-proxy

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  aws-readonly-policy.example.json  config.example.json5  docker-compose.yml  install.sh  main.py  pyproject.toml  test-review-thread.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-design.md
docs/: architecture.md  operations.md  usage.md
fgap/: __main__.py  server.py
fgap/client/: aws.py  base.py  fly.py  gh.py  gog.py  langfuse.py  notion.py
fgap/core/: config.py  credential.py  executor.py  http.py  masking.py  policy.py  processes.py  router.py
fgap/plugins/: __init__.py  base.py
fgap/plugins/aws/: __init__.py  credential.py  plugin.py  policy.py
fgap/plugins/fly/: __init__.py  commands.py  credential.py  plugin.py
fgap/plugins/github/: __init__.py  app_token.py  credential.py  git_proxy.py  graphql.py  plugin.py  policy.py
fgap/plugins/github/commands/: pr.py  (+3 more)
fgap/plugins/google/: __init__.py  credential.py  plugin.py
fgap/plugins/http_proxy/: __init__.py  login.py  oauth2.py  plugin.py  proxy.py
fgap/plugins/langfuse/: __init__.py  credential.py  plugin.py  policy.py
fgap/plugins/notion/: __init__.py  credential.py  plugin.py
fgap/plugins/s3/: __init__.py  plugin.py  proxy.py
tests/: conftest.py  test_aws_credential.py  test_aws_policy.py  test_client_aws.py  test_client_base.py  test_client_fly.py  test_client_gh.py  test_client_gh_pr_checkout.py  test_client_gh_release_download.py  test_client_gog.py  test_client_langfuse.py  test_config.py  test_credential.py  test_executor.py  test_fly_credential.py  test_fly_plugin.py  test_github_app_token.py  test_github_credential.py  test_github_discussion_command.py  test_github_git_proxy.py  test_github_graphql.py  test_github_health.py  test_github_issue_command.py  test_github_policy.py  test_github_pr_command.py  test_github_sub_issue_command.py  test_google_credential.py  test_google_health.py  test_google_plugin.py  test_http_proxy.py  test_http_proxy_login.py  test_http_proxy_oauth2.py  test_http_session.py  test_langfuse_credential.py  test_langfuse_health.py  test_langfuse_policy.py  test_managed_processes.py  test_masking.py  test_notion_credential.py  test_notion_health.py  (+5 more)
