[project]
name = "fgap"
version = "0.1.0"
description = "Multi-CLI auth proxy that isolates credentials from AI agent sandbox environments"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "botocore>=1.34",
    "httpx[http2]>=0.27",
    "json5>=0.9",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
fgap-oauth-login = "fgap.plugins.http_proxy.login:main"
fgap-gh = "fgap.client.gh:main"
fgap-gog = "fgap.client.gog:main"
fgap-notion = "fgap.client.notion:main"
fgap-langfuse = "fgap.client.langfuse:main"
fgap-fly = "fgap.client.fly:main"
fgap-aws = "fgap.client.aws:main"

[tool.uv]
# Without this, uv treats the project as "virtual" (no [build-system]
# declared) and skips installing [project.scripts] entry points, so
# `uv run fgap-oauth-login` in this repo fails with "Failed to spawn".
# Consumers that pull fgap in as a dependency are unaffected either way.
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
